--- a/list.css
+++ b/list.css
@@ -56,13 +56,7 @@
   text-align: center;
 }
 
-.mainplane__base {
-  background: #fff;
-  min-height: 200px;
-  border-radius: 10px;
-  border: 1px #bdc8ca solid;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-}
+
 
 .main-title__base {
   background: #fff;
@@ -106,4 +100,160 @@
 
 .main--title-clearfix {
   clear: both;
+}
+
+.mainplane__base {
+  background: #fff;
+  min-height: 200px;
+  border-radius: 10px;
+  border: 1px #bdc8ca solid;
+  border-top: 8px rgb(000, 000, 228) solid;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.mainplane__title {
+  font-size: 1.2em;
+  margin: 10px;
+  margin-left: 20px;
+}
+
+.mainplane__title--link {
+  margin-left: 15px;
+  text-decoration: underline;
+}
+
+.mainplane__category {
+  font-size: 0.8em;
+  background: rgba(000, 000, 228, 0.8);
+  color: #fff;
+  padding: 2px 5px 2px;
+}
+
+.mainplane__type {
+  font-size: 0.8em;
+  background: #444;
+  color: #fff;
+  padding: 2px 5px 2px;
+}
+
+.mainplane__photo {
+  margin-left: 20px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  border: 1px #444 solid;
+}
+
+.mainplane__photo:hover {
+  opacity: 0.8;
+  border: 2px rgb(000, 000, 228) solid;
+  cursor: pointer;
+}
+
+.photo-thumnail {
+  width: 100%;
+}
+
+.mainplane__table {
+  margin-bottom: 10px;
+  margin-right: 20px;
+}
+
+.mainplane__table th {
+  border: 1px rgb(000, 000, 228) solid;
+  padding: 10px;
+  width: 300px;
+  font-weight: normal;
+  font-size: 0.8em;
+  background: rgba(000, 000, 127, 0.05);
+  color: rgb(000, 000, 228);
+}
+
+.mainplane__table td {
+  border: 1px rgb(000, 000, 228) solid;
+  padding: 10px;
+  width: 400px;
+  font-size: 0.8em;
+}
+
+.mainplane__sub-info {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.mainplane__sub-info__title {
+  padding-left: 10px;
+  font-size: 0.9em;
+  color: rgb(000, 000, 228);
+  border-top: 1px rgb(000, 000, 228) solid;
+  border-bottom: 1px rgb(000, 000, 228) solid;
+  background: rgba(000, 000, 127, 0.05);
+}
+
+.mainplane__sub-info__body {
+  padding: 10px;
+  padding-left: 30px;
+  border-bottom: 1px rgb(000, 000, 228) solid;
+  position: relative;
+}
+
+.mainplane__sub-info__body::before {
+  content: "";
+  background: rgb(000, 000, 228);
+  height: 10px;
+  width: 10px;
+  left: 15;
+  top: 15;
+  border-radius: 50%;
+  line-height: normal;
+  position: absolute;
+}
+
+table.mainplane__sub-info__table {
+  width: 100%;
+}
+
+.mainplane__sub-info__table thead {
+  color: rgb(000, 000, 228);
+  background: rgba(000, 000, 127, 0.05);
+  border-bottom: 1px rgb(000, 000, 228) solid;
+}
+
+.mainplane__sub-info__table thead th {
+  font-weight: normal;
+  font-size: 0.8em;
+  text-align: center;
+}
+
+.mainplane__sub-info__table tbody {
+  border-bottom: 1px rgb(000, 000, 228) solid;
+  font-size: 0.9em;
+}
+
+.mainplane__sub-info__table tbody td {
+  font-weight: normal;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: rgba(000, 000, 127, 0.07);
+}
+
+.price {
+  font-size: 1.3em;
+  color: rgb(000, 000, 228);
+  font-weight: bold;
+  line-height: 10px;
+}
+
+.mainplane__btn {
+  background: rgba(000, 000, 228, 0.9);
+  margin: 10px;
+  padding: 3px;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #fff;
+  border-radius: 5px;
+  border: 0;
+  font-size: 0.8em;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
