--- a/list.css
+++ b/list.css
@@ -19,6 +19,25 @@
   border-color: rgba(000, 000, 228, 0.7) transparent transparent transparent;
 }
 
+.description-body {
+  text-align: center;
+}
+
+.comming_soon {
+  margin: auto;
+  margin-top: 20px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  font-size: 1.5em;
+  color: #fff;
+  background-color: rgba(000, 000, 228, 1);
+  border-radius: 20px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  width: 70%;
+}
+
 .sideplane__base {
   background: #fff;
   min-height: 200px;
@@ -55,8 +74,6 @@
   text-decoration: underline;
   text-align: center;
 }
-
-
 
 .main-title__base {
   background: #fff;
